# pypackage

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  config-travis-testing.yml  cookiecutter.json  deploy-test-pypi.sh  pyproject.toml  test.sh  testing-config.yml
.github/: dependabot.yml
.github/workflows/: issue-manager.yml  publish.yml  test.yml
scripts/: format.sh  lint.sh  publish.sh  test.sh
tests/: test_module.py
{{cookiecutter.package_name}}/: CHANGELOG.md  Pipfile  README.md  pyproject.toml
{{cookiecutter.package_name}}/scripts/: build-docs.sh  docs-live.sh
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  module.py
{{cookiecutter.project_name}}/: module.py
{{cookiecutter.project_name}}/scripts/: deploy.sh  format.sh  test.sh
{{cookiecutter.project_name}}/tests/: test_module.py
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
{{cookiecutter.repo_name}}/.github/workflows/: issue-manager.yml  publish.yml  test.yml
{{cookiecutter.repo_name}}/docs/: index.md
{{cookiecutter.repo_name}}/scripts/: format.sh  lint.sh  publish.sh  test.sh
